--- a/23년/230213 공식문서.md
+++ b/23년/230213 공식문서.md
@@ -12,7 +12,7 @@ marp: true
 # **Marp**
 
 Markdown Presentation Ecosystem
-
+https://marpit.marp.app/
 https://marp.app/
 
 ---
@@ -33,3 +33,41 @@ foobar
 
 foobar
 ```
+
+---
+![w:320 h:320](https://user-images.githubusercontent.com/52515917/111857507-4a8f0d00-8975-11eb-93d9-c896eb19a561.jpg) <!-- Setting size to 32x32 px -->
+
+
+---
+![bg](https://fakeimg.pl/800x600/0288d1/fff/?text=A)
+![bg](https://fakeimg.pl/800x600/02669d/fff/?text=B)
+![bg](https://fakeimg.pl/800x600/67b8e3/fff/?text=C)
+
+---
+
+![bg vertical](https://fakeimg.pl/800x600/0288d1/fff/?text=A)
+![bg](https://fakeimg.pl/800x600/02669d/fff/?text=B)
+![bg](https://fakeimg.pl/800x600/67b8e3/fff/?text=C)
+
+---
+
+![bg left](https://picsum.photos/720?image=29)
+
+# Split backgrounds
+
+The space of a slide content will shrink to the right side.
+
+---
+
+![bg right](https://picsum.photos/720?image=3)
+![bg](https://picsum.photos/720?image=20)
+
+# Split + Multiple BGs
+
+The space of a slide content will shrink to the left side.
+
+---
+
+![bg left:33%](https://picsum.photos/720?image=27)
+
+# Split backgrounds with specified size
