--- a/23년/230215 예시.md
+++ b/23년/230215 예시.md
@@ -1,5 +1,17 @@
 ---
+/* Change to the classic 4:3 slide */
+section {
+  width: 960px;
+  height: 720px;
+}
+
 marp: true
+
+section {
+  background-color: #fff;
+  color: #333;
+}
+
 ---
 
 /* @theme marpit-theme */
@@ -19,3 +31,8 @@ h1 {
 h2 {
   font-size: 50px;
 }
+
+---
+
+dfhaj;
+
