--- a/23년/230214 css/230216 예시.md
+++ b/23년/230214 css/230216 예시.md
@@ -1,5 +1,43 @@
 ---
 marp: true
+
+/* @theme marpit-theme */
+
+section {
+  width: 1280px;
+  height: 960px;
+  font-size: 40px;
+  padding: 40px;
+}
+
+h1 {
+  font-size: 60px;
+  color: #09c;
+}
+
+h2 {
+  font-size: 50px;
+}
+
+section {
+  padding: 50px;
+}
+
+header,
+footer {
+  position: absolute;
+  left: 50px;
+  right: 50px;
+  height: 20px;
+}
+
+header {
+  top: 30px;
+}
+
+footer {
+  bottom: 30px;
+}
 ---
 
 ## 두 번재 페이지
