--- a/23년/230213 공식문서.md
+++ b/23년/230213 공식문서.md
@@ -70,3 +70,16 @@ The space of a slide content will shrink to the left side.
 ![bg left:33%](https://picsum.photos/720?image=27)
 
 # Split backgrounds with specified size
+
+---
+
+구글 드라이브에서 이미지 불러올 때
+
+![에스 bg left:40% 80%](https://drive.google.com/uc?id=1PRisHNBgppY-VpvyZQMGlol9EbIJRfv8)
+
+![에스 height:5cm](https://drive.google.com/uc?id=1PRisHNBgppY-VpvyZQMGlol9EbIJRfv8)
+
+![w:320 h:320](https://drive.google.com/uc?id=1PRisHNBgppY-VpvyZQMGlol9EbIJRfv8)
+
+![bg right:50% 80%](https://drive.google.com/uc?id=1PRisHNBgppY-VpvyZQMGlol9EbIJRfv8)
+
